--- a/mensa_recommend/docker-compose.yml
+++ b/mensa_recommend/docker-compose.yml
@@ -16,6 +16,19 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     environment:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
+    ports:
+      - "5432:5432"
+  pgadmin:
+      image: dpage/pgadmin4
+      container_name: demo-pgadmin #you can change this
+      depends_on:
+        - db
+      ports:
+        - "5051:80"
+      environment:
+        PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+        PGADMIN_DEFAULT_PASSWORD: root
+      restart: always
 
 volumes:
   postgres_data:
