changed docker compose

--- a/mensa_recommend/docker-compose.yml
+++ b/mensa_recommend/docker-compose.yml
@@ -8,27 +8,34 @@ services:
     ports:
       - 9999:9999
     command: python manage.py runserver 0.0.0.0:9999
+    env_file:
+    - database-variables.env
     depends_on:
       - db
   db:
     image: postgres:15
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    environment:
-      - "POSTGRES_HOST_AUTH_METHOD=trust"
+    env_file:
+    - database-variables.env
+    expose:
+    - "5433"
     ports:
-      - "5432:5432"
+      - "5433:5432"
+    command: -p 5433
   pgadmin:
       image: dpage/pgadmin4
-      container_name: demo-pgadmin #you can change this
+      container_name: pgadmin
       depends_on:
         - db
+      env_file:
+      - database-variables.env
       ports:
         - "5051:80"
-      environment:
-        PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
-        PGADMIN_DEFAULT_PASSWORD: root
+      volumes:
+        - pgadmin_data:/var/lib/pgadmin
       restart: always
 
 volumes:
   postgres_data:
+  pgadmin_data:
