--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "jsencrypt": "^3.3.1",
     "pug-plain-loader": "^1.1.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
