--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -2,7 +2,9 @@ version: '3.8'
 services:
   app:
     image: mensa_app
-    build: mensa_recommend
+    build:
+      context: mensa_recommend
+      dockerfile: Dockerfile.prod
     volumes:
       - ./mensa_recommend/:/app
     ports:
@@ -10,6 +12,7 @@ services:
     command: python manage.py runserver 0.0.0.0:9999
     env_file:
       - database-variables.env
+      - prod-variables.env
     environment:
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
@@ -40,12 +43,15 @@ services:
       - pgadmin_data:/var/lib/pgadmin
     restart: always
   celery:
-    build: mensa_recommend
+    build:
+      context: mensa_recommend
+      dockerfile: Dockerfile.prod
     command: celery -A mensa_recommend worker -l INFO
     volumes:
       - ./mensa_recommend/:/usr/src/app
     env_file:
       - database-variables.env
+      - prod-variables.env
     environment:
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
@@ -57,13 +63,14 @@ services:
   frontend:
     build:
       context: frontend
+      dockerfile: Dockerfile.prod
     ports:
-      - "8080:8080"
+      - '8080:8080'
     command: npm run serve
     container_name: vue-ui
     volumes:
-       - ./frontend:/usr/src/app
-       - /usr/src/app/node_modules
+      - ./frontend:/usr/src/app
+      - /usr/src/app/node_modules
 
 volumes:
   postgres_data:
