--- a/mensa_recommend/Dockerfile.local
+++ b/mensa_recommend/Dockerfile.local
@@ -4,4 +4,7 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
 
+RUN apt-get update
+RUN apt-get install -y cron
+
 COPY . .
