#140 use different cron setup

--- a/mensa_recommend/Dockerfile.prod
+++ b/mensa_recommend/Dockerfile.prod
@@ -4,4 +4,13 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip3 install --proxy="http://wwwproxy.uni-muenster.de:3128" -r requirements.txt
 
+RUN apt-get update
+RUN apt-get install -y cron
+
 COPY . .
+
+# At 03:00 on Sunday.
+RUN crontab -l | { cat; echo "0 3 * * 0 bash /app/cron/collect_dishes.sh >> /cron/django_cron.log 2>&1"; } | crontab -
+
+RUN mkdir /cron
+RUN touch /cron/django_cron.log
