--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,6 +10,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    env:
+      working-directory: ./backend
     strategy:
       max-parallel: 4
       matrix:
