--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,8 +10,6 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      working-directory: ./backend
     strategy:
       max-parallel: 4
       matrix:
@@ -24,9 +22,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
+      working-directory: backend
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
+      working-directory: backend
       run: |
         python manage.py test
