--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -4,6 +4,9 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip3 install --proxy="http://wwwproxy.uni-muenster.de:3128" -r requirements.txt
 
+ENV http_proxy http://wwwproxy.uni-muenster.de:3128
+ENV https_proxy http://wwwproxy.uni-muenster.de:3128
+
 RUN apt-get update
 RUN apt-get install -y cron
 
