--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -48,7 +48,7 @@ services:
       dockerfile: Dockerfile.prod
     command: celery -A mensa_recommend worker -l INFO
     volumes:
-      - ./backend/:/usr/src/app
+      - ./backend/:/app
     env_file:
       - database-variables.env
       - prod-variables.env
