solve nginx bugs

--- a/frontend/data/nginx/nginx.conf
+++ b/frontend/data/nginx/nginx.conf
@@ -2,18 +2,21 @@ server {
     listen 80;
     server_name mensa.martenjostmann.de;
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://mensa.martenjostmann.de/$request_uri;
     }
 
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        allow all;
+	root /var/www/certbot;
     }
 }
 
+
 server {
-    listen 443 ssl;
+    listen 443 ssl http2;
     server_name mensa.martenjostmann.de;
 
+    ssl on;
     ssl_certificate /etc/letsencrypt/live/mensa.martenjostmann.de/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/mensa.martenjostmann.de/privkey.pem;
 
@@ -21,9 +24,10 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri $uri/ /index.html;
+	allow all;
+	root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
     }
     location /api/v1 {
         try_files $uri @proxy_api;
@@ -36,3 +40,5 @@ server {
         proxy_set_header Host $http_host;
     }
 }
+
+
