--- a/frontend/Dockerfile.vm.prod
+++ b/frontend/Dockerfile.vm.prod
@@ -14,7 +14,7 @@ RUN npm run build
 
 # production stage
 FROM nginx:stable-alpine as production-stage
-COPY --from=build-stage usr/src/app/nginx/nginx.conf /etc/nginx/conf.d/default.conf:ro
+COPY --from=build-stage usr/src/app/data/nginx/nginx.conf /etc/nginx/conf.d/default.conf:ro
 COPY --from=build-stage usr/src/app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
