agg pgadmin to nginx

--- a/frontend/data/nginx/nginx.conf
+++ b/frontend/data/nginx/nginx.conf
@@ -29,6 +29,7 @@ server {
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
+
     location /api/v1 {
         try_files $uri @proxy_api;
     }
@@ -36,6 +37,17 @@ server {
     location @proxy_api {
         proxy_redirect off;
         proxy_pass http://app:9999;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+    }
+
+    location /pgadmin {
+        try_files $uri @pg_admin;
+    }
+    
+    location @pg_admin {
+        proxy_redirect off;
+        proxy_pass http://pgadmin:8888;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
     }
