enable pgadmin behin nginx

--- a/frontend/data/nginx/nginx.conf
+++ b/frontend/data/nginx/nginx.conf
@@ -40,16 +40,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
     }
-
-    location /pgadmin {
-        try_files $uri @pg_admin;
-    }
     
-    location @pg_admin {
+    location /pgadmin {
         proxy_redirect off;
-        proxy_pass http://pgadmin:8888;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_pass http://pgadmin:80;
+        proxy_set_header X-Scheme $scheme;
         proxy_set_header Host $http_host;
+        proxy_set_header X-Script-Name /pgadmin4;
     }
 }
 
