--- a/frontend/data/nginx/nginx.conf
+++ b/frontend/data/nginx/nginx.conf
@@ -29,17 +29,21 @@ server {
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
     }
-
-    location /api/v1 {
-        try_files $uri @proxy_api;
-    }
     
-    location @proxy_api {
+    location /api/v1/ {
         proxy_redirect off;
         proxy_pass http://app:9999;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
     }
+
+    location /settings/ {
+        proxy_redirect off;
+        proxy_pass http://app:9999;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+    }
+
     
     location /pgadmin {
         proxy_redirect off;
