--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -2,10 +2,7 @@ FROM python:3.9-slim-buster
 ENV PYTHONUNBUFFERED=1
 WORKDIR /app
 COPY requirements.txt requirements.txt
-RUN pip3 install --proxy="http://wwwproxy.uni-muenster.de:3128" -r requirements.txt
-
-ENV http_proxy http://wwwproxy.uni-muenster.de:3128
-ENV https_proxy http://wwwproxy.uni-muenster.de:3128
+RUN pip3 install -r requirements.txt
 
 RUN apt-get update
 RUN apt-get install -y cron
