--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "jsencrypt": "^3.3.1",
+    "leaflet": "^1.9.3",
+    "leaflet.markercluster": "^1.5.3",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "vue": "^2.6.14",
